--- a/source/root/usr/share/doc/logdata-anomaly-miner/aminer/Changelog.txt
+++ b/source/root/usr/share/doc/logdata-anomaly-miner/aminer/Changelog.txt
@@ -1,3 +1,15 @@
+V2.0.1 (2020-06-24)
+===================
+
+* Changes:
+  * Updated documentation
+  * Updated testcases
+  * Updated demos
+  * Updated debian files
+  * Added copyright headers
+  * Added executable bit to AMiner
+  
+
 V2.0.0 (2020-05-29):
 ====================
 
