--- a/source/root/usr/share/doc/logdata-anomaly-miner/aminer/Changelog.txt
+++ b/source/root/usr/share/doc/logdata-anomaly-miner/aminer/Changelog.txt
@@ -135,7 +135,7 @@ V0.0.5 (2016-10-11):
   * Added support for logfile reading continuation after shutdown,
     alternative lowlevel data stream splitting tools (atomizers).
 * Bugfixes:
-  * Fixed file descriptor leak in PersistencyUtil.py on store.
+  * Fixed file descriptor leak in PersistenceUtil.py on store.
 
 
 V0.0.4 (2016-08-26):
