Changes for new release 2.1.0
This commit adds Georg Hoeld as author, adds some copyright-disclaimer to the source-files
and adds new changelogs

--- a/changelog
+++ b/changelog
@@ -1,3 +1,36 @@
+logdata-anomaly-miner (2.1.0) unstable; urgency=low
+
+  Changes:
+  * Added VariableTypeDetector,EventTypeDetector and EventCorrelationDetector
+  * Added support for unclean format strings in the DateTimeModelElement
+  * Added timezones to the DateTimeModelElement
+  * Enhanced ApacheAccessModel
+  * Yamlconfig: added support for kafka stream
+  * Removed cpu limit configuration
+  * Various refactoring
+  * Yamlconfig: added support for more detectors
+  * Added new command-line-parameters
+  * Renamed executables to aminer.py and aminerremotecontroly.py
+  * Run Aminer in forgroundd-mode per default
+  * Added various unit-tests
+  * Improved yamlconfig and checks
+  * Added start-config for parser to yamlconfig
+  * Renamed config templates
+  * Removed imports from init.py for better modularity
+  * Created AnalysisComponentsPerformanceTests for the EventTypeDetector
+  * Extended demo-config
+  * Renamed whitelist to allowlist
+  * Added warnings for non-existent resources
+  * Changed default of auto_include_flag to false
+  Bugfixes:
+  * Fixed some exit() in forks
+  * Fixed debian files
+  * Fixed JSON output of the AffectedLogAtomValues in all detectors
+  * Fixed normal output of the NewMatchPathValueDetector
+  * Fixed reoccuring alerting in MissingMatchPathValueDetector
+
+ -- Markus Wurzenberger <markus.wurzenberger@ait.ac.at>  Thu,  05 Nov 2020 17:00:00 +0000
+
 logdata-anomaly-miner (2.0.2) unstable; urgency=low
 
   Changes:
