Added Changelog for version 2.2.0

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+logdata-anomaly-miner (2.2.0-1) unstable; urgency=low
+
+  * New upstream release V2.2.0
+
 logdata-anomaly-miner (2.0.1-1) unstable; urgency=low
 
   * New upstream release V2.0.1
