--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+logdata-anomaly-miner (2.2.1-1) unstable; urgency=low
+
+  Bugfixes:
+  * Fixed warnigs due to files in Persistency-Directory
+  * Fixed ACL-problems in dockerfile and autocreate /var/lib/aminer/log
+  Changes:
+  * added simple test for dockercontainer
+  * negate result of the timeout-command. 1 is okay. 0 must be an error
+  * added bullseye-tests
+  * make tmp-dir in debian-bullseye-test and debian-buster-test unique
+
+ -- Markus Wurzenberger <markus.wurzenberger@ait.ac.at>  Mon,  25 Jan 2021 12:00:00 +0000
+
 logdata-anomaly-miner (2.2.0-1) unstable; urgency=low
 
   [ Markus Wurzenberger ]
