--- a/changelog
+++ b/changelog
@@ -1,3 +1,24 @@
+logdata-anomaly-miner (2.3.0) unstable; urgency=low
+  Bugfixes:
+  * Changed pyyaml-version to 5.4
+  * NewMatchIdValueComboDetector: Fix allow multiple values per id path
+  * ByteStreamLineAtomizer: fixed encoding error
+  * Fixed too many open directory-handles
+  * Added close() function to LogStream
+  Changes:
+  * Added EventFrequencyDetector
+  * Added EventSequenceDetector
+  * Added JsonModelElement
+  * Added tests for Json-Handling
+  * Added command line parameter for update checks
+  * Improved testing
+  * Splitted yaml-schemas into multiple files
+  * Improved support for yaml-config
+  * YamlConfig: set verbose default to true
+  * Various refactoring
+
+ -- Markus Wurzenberger <markus.wurzenberger@ait.ac.at>  Mon,  29 Mar 2021 12:00:00 +0000
+
 logdata-anomaly-miner (2.2.1) unstable; urgency=low
   Bugfixes:
   * Fixed warnigs due to files in Persistency-Directory
