--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+logdata-anomaly-miner (2.3.1) unstable; urgency=low
+  Bugfixes:
+  * Replaced username and groupname with uid and gid for chown()
+  * Removed hardcoded username and groupname
+
+ -- Markus Wurzenberger <markus.wurzenberger@ait.ac.at>  Thu,  08 Apr 2021 12:00:00 +0000
+
 logdata-anomaly-miner (2.3.0) unstable; urgency=low
   Bugfixes:
   * Changed pyyaml-version to 5.4
