prepared aminer for 2.4.0

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,3 +5,4 @@ Wolfgang Hotwagner <wolfgang.hotwagner@ait.ac.at>
 Ernst Leierzopf <ernst.leierzopf.fl@ait.ac.at>
 Georg Hoeld <georg.hoeld@ait.ac.at>
 Florian Skopik <florian.skopik@ait.ac.at>
+Daniel Klimas
