--- a/changelog
+++ b/changelog
@@ -1,3 +1,30 @@
+logdata-anomaly-miner (2.4.1) unstable; urgency=low
+  Bugfixes:
+  * Fixed issues with array of arrays in JsonParser
+  * Fixed problems with invalid json-output
+  * Fixed ValueError in DTME
+  * Fixed error with parsing floats in scientific notation with the JsonModelElement.
+  * Fixed issue with paths in JsonModelElement
+  * Fixed error with \x encoded json 
+  * Fixed error where EMPTY_ARRAY and EMPTY_OBJECT could not be parsed from the yaml config
+  * Fixed a bug in the TSA when encountering a new event type
+  * Fixed systemd script
+  * Fixed encoding errors when reading yaml configs
+  Changes:
+  * Add entropy detector
+  * Add charset detector
+  * Add value range detector
+  * Improved ApacheAccessModel, AudispdParsingModel
+  * Refactoring
+  * Improved documentation
+  * Improved testing
+  * Improved schema for yaml-config
+  * Added EMPTY_STRING option to the JsonModelElement
+  * Implemented check to report unparsed atom if ALLOW_ALL is used with data
+    with a type other than list or dict
+
+ -- Markus Wurzenberger <markus.wurzenberger@ait.ac.at>  Fri,  23 Jul 2021 12:00:00 +0000
+
 logdata-anomaly-miner (2.4.0) unstable; urgency=low
   Bugfixes:
   * Fixed error in JsonModelElement
