--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+logdata-anomaly-miner (2.4.1-1) unstable; urgency=low
+
+ * New upstream release V2.4.1, see
+    https://github.com/ait-aecid/logdata-anomaly-miner/releases/tag/V2.4.1
+
+ -- Markus Wurzenberger <markus.wurzenberger@ait.ac.at>  Fri,  23 Jul 2021 12:00:00 +0000
+
 logdata-anomaly-miner (2.4.0-1) unstable; urgency=low
 
  * New upstream release V2.4.0, see
