--- a/changelog
+++ b/changelog
@@ -1,3 +1,17 @@
+logdata-anomaly-miner (2.5.0) unstable; urgency=low
+  Bugfixes:
+  * Fixed bug in YamlConfig
+  Changes:
+  * Added supervisord to docker
+  * Moved unparsed atom handlers to analysis(yamlconfig)
+  * Moved new_match_path_detector to analysis(yamlconfig)
+  * Refactor: merged all UnparsedHandlers into one python-file
+  * Added remotecontrol-command for reopening eventhandlers
+  * Added config-parameters for logrotation
+  * Improved testing
+
+ -- Markus Wurzenberger <markus.wurzenberger@ait.ac.at>  Fri,  03 Dec 2021 12:00:00 +0000
+
 logdata-anomaly-miner (2.4.2) unstable; urgency=low
   Bugfixes:
   * PVTID: Fixed output format of previously appeared times
