--- a/debian/changelog
+++ b/debian/changelog
@@ -4,11 +4,11 @@ logdata-anomaly-miner (2.6.0-1) unstable; urgency=low
   * New upstream release V2.6.0, see
     https://github.com/ait-aecid/logdata-anomaly-miner/releases/tag/V2.6.0
 
-logdata-anomaly-miner (2.5.1-1) unstable; urgency=low
+  [ Sebastian Ramacher ]
+  * debian/control: Bump Standards-Version
+  * debian/copyright: Update copyright years
 
-  [ Markus Wurzenberger ]
-  * New upstream release V2.5.1, see
-    https://github.com/ait-aecid/logdata-anomaly-miner/releases/tag/V2.5.1
+ -- Markus Wurzenberger <markus.wurzenberger@ait.ac.at>  Wed, 01 Feb 2023 21:46:34 +0100
 
 logdata-anomaly-miner (2.5.0-1) unstable; urgency=low
 
