--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+logdata-anomaly-miner (2.6.1) unstable; urgency=low
+  Changes:
+  * minor refactoring
+  * fixed code styling issues
+
+ -- Markus Wurzenberger <markus.wurzenberger@ait.ac.at> Tue,  21 Feb 2023 12:00:00 +0000
+
 logdata-anomaly-miner (2.6.0) unstable; urgency=low
   Bugfixes:
   * fixed bug in JsonModelElement where the aminer gets stuck in an endless loop searching for \x.
